assets/css/styles.css
* {
    margin: 0;
    padding: 0;
    border: none;
}

a {
    text-decoration: none; 
}

body {
    font-family: 'Raleway', sans-serif;
    font-weight: 300;
    color: #fff;
}

h1, h2 {
    font-family: 'Libre Baskerville', serif;
    text-transform: uppercase;
    letter-spacing: 4px;
}

header {
    
    display: flex;
    justify-content: space-between;
    background-color: #E1E2E7;
}

footer {
    height: 300px;
    background-color: #323f4e;
    overflow: auto;
}

#nav {
    margin: 10% 0;
}

#nav li a {
    text-decoration: none;
    color: #323f4e;
}

#nav li {
    letter-spacing: 4px;
    font-size: 110%;
    list-style-type: none;
    padding-right: 100px;
}

.active {
    border-bottom: 1px solid #323f4e;
}

#logo {
        width: 300px;
    }
    
#hero-outer {
    height: 800px;
    width: 100%;
    overflow: hidden;
    position: relative;
}

#hero-image {
    height: 800px;
    width: 100%; 
    background-image: url(../images/hero2-unsplash-placeholder.jpg);
    background-size: cover;
    background-repeat: no-repeat;
    /* animation: scrollBackground 20s linear infinite reverse; */
}

/* @keyframes scrollBackground {
    0% {
        background-position: 0 0;
      }
      100% {
        background-position: 0 -3240px;
      }
} */

#hero-text {
    font-size: 130%;
    letter-spacing: 3px;
    /* width: 400px;
    height: 150px; */
    padding-top: 30px;
    padding-left: 10px;

    background-color: rgba(79, 60, 58, 0.8);
    border-radius: 2%;

    bottom: 30px;
    right: 80px;
    position: absolute;
    text-align: center;
    color: #E1E2E7
}


.menu-background {
    width: 100%;
    background-color: #161510;
    border: 1px solid #ffffff;
}

.grid-buy-container {
    width: 80%;
    background-color: #E1E2E7;
    display: flex;
    justify-content: space-evenly;
    overflow: auto;
    flex-wrap: wrap;
    margin: 5px 10% 5px 10%;
}

.grid-buy-item {
    width: 300px;
    padding: 10px 30px 10px 30px;
    color: #161510;
}

.grid-buy-item img {
    max-width: 100%;
    height: auto;
}

#footer-top {
    display: flex;
    justify-content: space-between;
    
}

#footer-nav {
    list-style: none;
    float: left; 
}

#footer-nav li {
    margin: 10% 20px;
}

#footer-nav li a {
    text-decoration: none;
    color: #E1E2E7;
}

#footer-bottom {
    display: flex;
    justify-content: space-between;
}

#site-footer-left {
    max-width: 70%;
}

#payment-icons {
    font-size: 0;
    list-style: none;
    margin-right: 20px;

}

#payment-icons li {
    float: right;

}

/* trusthostess widget modified and found on https://codepen.io/himstar/pen/eQzEeg */

.trustpilot-widget {
    color: #fff;
    padding: 30px 0 25px 0;
    overflow: hidden;
    margin-right: 20px;
  }

  .trustpilot-widget .wrapper-left a {
    color: #fff;
    font-weight: 600;
    text-decoration: underline;
  }

  .trustpilot-widget .wrapper-left .title {
    color: #fff;
    font-size: 24px;
    padding: 0;
    margin: 0;
    margin-bottom: 10px;
  }
  .trustpilot-widget .wrapper-left .rating img {
    max-width: 160px;
    margin: auto;
  }

  .trustpilot-widget .wrapper-left .brand-logo img {
    max-width: 25px;
    margin: auto;
    margin-top: -10px;
    display: inline-block;
  }
  .trustpilot-widget .wrapper-left .brand-logo p {
    font-size: 18px;
    line-height: 35px;
    color: #fff;
    text-align: center;
    display: inline-block;
  }

  /* end trusthostess widget*/


  /* Sell page CSS */



  #sell_container {
    width: 80%;
    background-color: #E1E2E7;
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;

  }

.sell_input {
    width: 300px;
    padding: 10px 30px 10px 30px;
    color: #161510;
}

.sell_input input {
    background-color: #323f4e;
}

.description input {
    width: 100px;
    height: 100px;
}
  

